# ElectricalGripHardware

./: CMakeLists.txt  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
src/: ElectricalGripHardware.c
src/models/: models.h
src/onnx/: grid_predictor.h
src/services/: data_collector_service.c  data_collector_service.h  main_service.c  main_service.h  predict_load_service.c  predict_load_service.h
src/utils/: main_utils.c  main_utils.h
